--- a/Random Users/Base.lproj/Main.storyboard
+++ b/Random Users/Base.lproj/Main.storyboard
@@ -27,12 +27,10 @@
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dyx-UO-kbO">
                                             <rect key="frame" x="16" y="5" width="60" height="60"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" secondItem="dyx-UO-kbO" secondAttribute="height" multiplier="1:1" id="7Kg-MI-Dzb"/>
-                                                <constraint firstAttribute="width" constant="60" id="k4m-i7-dd4"/>
-                                                <constraint firstAttribute="height" constant="60" id="q0S-4y-xWf"/>
+                                                <constraint firstAttribute="width" constant="60" id="2Ed-iy-NkX"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KD-zB-NRa">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KD-zB-NRa">
                                             <rect key="frame" x="88" y="25" width="259" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -40,15 +38,18 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="dyx-UO-kbO" secondAttribute="bottom" constant="5" id="0vU-eR-L5Z"/>
-                                        <constraint firstItem="9KD-zB-NRa" firstAttribute="top" secondItem="YwX-eq-iUX" secondAttribute="topMargin" constant="14" id="J1a-lu-6sQ"/>
-                                        <constraint firstItem="dyx-UO-kbO" firstAttribute="top" secondItem="YwX-eq-iUX" secondAttribute="top" constant="5" id="PcH-R6-wOP"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="9KD-zB-NRa" secondAttribute="trailing" constant="12" id="WQj-pK-n3b"/>
-                                        <constraint firstItem="9KD-zB-NRa" firstAttribute="leading" secondItem="dyx-UO-kbO" secondAttribute="trailing" constant="12" id="sWb-QE-TPo"/>
-                                        <constraint firstItem="dyx-UO-kbO" firstAttribute="leading" secondItem="YwX-eq-iUX" secondAttribute="leading" constant="16" id="yuV-nw-UKl"/>
+                                        <constraint firstItem="9KD-zB-NRa" firstAttribute="top" secondItem="YwX-eq-iUX" secondAttribute="topMargin" constant="14" id="CxU-Pb-xcH"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="9KD-zB-NRa" secondAttribute="trailing" constant="12" id="H5a-mh-g9Q"/>
+                                        <constraint firstItem="dyx-UO-kbO" firstAttribute="top" secondItem="YwX-eq-iUX" secondAttribute="topMargin" constant="-6" id="UPX-HH-6pl"/>
+                                        <constraint firstItem="dyx-UO-kbO" firstAttribute="centerY" secondItem="YwX-eq-iUX" secondAttribute="centerY" id="UQH-SJ-nF0"/>
+                                        <constraint firstItem="9KD-zB-NRa" firstAttribute="leading" secondItem="dyx-UO-kbO" secondAttribute="trailing" constant="12" id="Uz7-CF-evS"/>
+                                        <constraint firstItem="dyx-UO-kbO" firstAttribute="centerY" secondItem="9KD-zB-NRa" secondAttribute="centerY" id="dGf-w1-KPJ"/>
+                                        <constraint firstItem="dyx-UO-kbO" firstAttribute="leading" secondItem="YwX-eq-iUX" secondAttribute="leadingMargin" id="gOJ-Sc-9aq"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="userName" destination="9KD-zB-NRa" id="1WH-9d-BNj"/>
+                                    <outlet property="userPicture" destination="dyx-UO-kbO" id="8oT-5y-LfZ"/>
                                     <segue destination="cg5-Fg-mkd" kind="show" identifier="DetailSegue" id="pQx-hB-9ER"/>
                                 </connections>
                             </tableViewCell>
@@ -58,7 +59,13 @@
                             <outlet property="delegate" destination="bVc-gh-a3C" id="sGz-6l-XGW"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Random People" id="4pj-8G-98e"/>
+                    <navigationItem key="navigationItem" title="Random People" id="4pj-8G-98e">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="arrow.clockwise" catalog="system" id="N3h-3T-equ">
+                            <connections>
+                                <action selector="refreshTapped:" destination="bVc-gh-a3C" id="jba-75-oqv"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yFk-38-iKf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -93,9 +100,6 @@
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yj4-jP-bhU">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="355"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="yj4-jP-bhU" secondAttribute="height" multiplier="1:1" id="L15-CF-R47"/>
-                                        </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZjX-K7-e9C">
                                         <rect key="frame" x="0.0" y="367" width="355" height="24"/>
@@ -120,17 +124,27 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="WiE-bP-Hft" firstAttribute="leading" secondItem="uxJ-fh-hFj" secondAttribute="leading" constant="10" id="Cra-ET-xmj"/>
-                            <constraint firstItem="WiE-bP-Hft" firstAttribute="top" secondItem="uxJ-fh-hFj" secondAttribute="top" constant="10" id="TB6-kn-fLi"/>
-                            <constraint firstItem="uxJ-fh-hFj" firstAttribute="trailing" secondItem="WiE-bP-Hft" secondAttribute="trailing" constant="10" id="gK7-Th-lcN"/>
+                            <constraint firstItem="WiE-bP-Hft" firstAttribute="top" secondItem="uxJ-fh-hFj" secondAttribute="top" constant="10" id="52J-iH-zq5"/>
+                            <constraint firstItem="uxJ-fh-hFj" firstAttribute="bottom" secondItem="WiE-bP-Hft" secondAttribute="bottom" constant="217" id="PYg-ji-WO3"/>
+                            <constraint firstItem="WiE-bP-Hft" firstAttribute="leading" secondItem="uxJ-fh-hFj" secondAttribute="leading" constant="10" id="YDY-QF-5lh"/>
+                            <constraint firstItem="WiE-bP-Hft" firstAttribute="centerX" secondItem="fr2-yF-Waa" secondAttribute="centerX" id="cta-my-DEL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="uxJ-fh-hFj"/>
                     </view>
                     <navigationItem key="navigationItem" id="Sdp-JQ-eI9"/>
+                    <connections>
+                        <outlet property="userEmail" destination="nju-X8-OA2" id="T4B-PT-piU"/>
+                        <outlet property="userImage" destination="yj4-jP-bhU" id="Xs8-be-Hzv"/>
+                        <outlet property="userName" destination="ZjX-K7-e9C" id="m27-bD-fOB"/>
+                        <outlet property="userPhone" destination="XLZ-Bu-Oax" id="Uqc-Zk-Myp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pau-6E-K3f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1232.8" y="303.69458128078821"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="arrow.clockwise" catalog="system" width="115" height="128"/>
+    </resources>
 </document>
